// Vitest Snapshot v1

exports[`Stepper test > renders in display only mode 1`] = `
<div
  class="sc-gsFSXq eOXcbc"
>
  <div
    class="sc-iGgWBj jkGsyx"
  >
    <div
      class="sc-aXZVg cNzDby"
    >
      <div
        class="sc-gEvEer hmfUvh"
      >
        <p>
          01
        </p>
        <div
          class="sc-fqkvVR dlEvhZ"
        />
      </div>
      <div
        class="sc-eqUAAy kbRTYz"
      />
    </div>
    <div
      class="sc-dcJsrY LNwfx"
    >
      <h4>
        Personal
      </h4>
    </div>
  </div>
  <div
    class="sc-iGgWBj jkGsyx"
  >
    <div
      class="sc-aXZVg cNzDby"
    >
      <div
        class="sc-gEvEer hmfUvh"
      >
        <p>
          02
        </p>
        <div
          class="sc-fqkvVR dlEvhZ"
        />
      </div>
      <div
        class="sc-eqUAAy kbRTYz"
      />
    </div>
    <div
      class="sc-dcJsrY LNwfx"
    >
      <h4>
        Company
      </h4>
    </div>
  </div>
  <div
    class="sc-iGgWBj jkGsyx"
  >
    <div
      class="sc-aXZVg cNzDby"
    >
      <div
        class="sc-gEvEer hmfUvh"
      >
        <p>
          03
        </p>
        <div
          class="sc-fqkvVR dlEvhZ"
        />
      </div>
      <div
        class="sc-eqUAAy kbRTYz"
      />
    </div>
    <div
      class="sc-dcJsrY LNwfx"
    >
      <h4>
        ELD
      </h4>
    </div>
  </div>
</div>
`;

exports[`Stepper test > renders stepper with some content 1`] = `
<div
  class="sc-gsFSXq dZegDz"
>
  <div
    class="sc-iGgWBj jkGsyx"
  >
    <div
      class="sc-aXZVg cNzDby"
    >
      <div
        class="sc-gEvEer hmfUvh"
      >
        <p>
          01
        </p>
        <div
          class="sc-fqkvVR dlEvhZ"
        />
      </div>
      <div
        class="sc-eqUAAy kbRTYz"
      />
    </div>
    <div
      class="sc-dcJsrY LNwfx"
    >
      <h4>
        Personal
      </h4>
    </div>
  </div>
  <div
    class="sc-iGgWBj jkGsyx"
  >
    <div
      class="sc-aXZVg cNzDby"
    >
      <div
        class="sc-gEvEer hmfUvh"
      >
        <p>
          02
        </p>
        <div
          class="sc-fqkvVR dlEvhZ"
        />
      </div>
      <div
        class="sc-eqUAAy kbRTYz"
      />
    </div>
    <div
      class="sc-dcJsrY LNwfx"
    >
      <h4>
        Company
      </h4>
    </div>
  </div>
  <div
    class="sc-iGgWBj jkGsyx"
  >
    <div
      class="sc-aXZVg cNzDby"
    >
      <div
        class="sc-gEvEer hmfUvh"
      >
        <p>
          03
        </p>
        <div
          class="sc-fqkvVR dlEvhZ"
        />
      </div>
      <div
        class="sc-eqUAAy kbRTYz"
      />
    </div>
    <div
      class="sc-dcJsrY LNwfx"
    >
      <h4>
        ELD
      </h4>
    </div>
  </div>
</div>
`;
